# varphi

./: .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: .pipeline.yml  pipeline.yml  release.yml  test.yml
src/varphi/: cli.py
src/varphi_interpreter/: cli.py
tests/: test_examples.py  test_varphi_parser_and_lexer.py  test_varphi_types.py
varphi/: __init__.py
varphi/compilation/: __init__.py  core.py  varphi_compilation_errors.py  varphi_translator.py
varphi/parsing/: __init__.py
varphi/runtime/: __init__.py  cli.py  cli_debugger.py  cli_with_complexity.py  cli_with_prompts.py  common.py  debug_adapter.py  exceptions.py  types.py
varphi_interpreter/: vpi.py
